objects/orglimit_status__c.object
<CustomObject>
    <fields>
        <fullName>Max_Limit__c</fullName>
        <label>Max Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Percentage_used__c</fullName>
        <formula>(Max_Limit__c - Remaining__c)/ Max_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RM_orglimit status</label>
    <nameField>
        <label>orglimit status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RM_orglimit status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>